# SynGenes

./: CODE_OF_CONDUCT.md  LICENSE  README.md  SynGenes.xlsx  database.xlsx  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml  workflow.yml
.github/workflows/: PyPIpublish.yml  publish.yml
Examples/: Examples.ipynb
Examples/SynGenes.js/: SynGenes.js
SynGenes/: SynGenes.py
SynGenes.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
data Names/cp/: accD.tsv  atpA.tsv  atpB.tsv  atpE.tsv  atpF.tsv  atpH.tsv  atpI.tsv  ccsA.tsv  cemA.tsv  chlB.tsv  chlL.tsv  chlN.tsv  clpP.tsv  clpP1.tsv  cysA.tsv  cysT.tsv  ftsH.tsv  infA.tsv  lhbA.tsv  matK.tsv  ndhA.tsv  ndhB.tsv  ndhC.tsv  ndhD.tsv  ndhE.tsv  ndhF.tsv  ndhG.tsv  ndhH.tsv  ndhI.tsv  ndhJ.tsv  ndhK.tsv  pafI.tsv  pafII.tsv  pbf1.tsv  petA.tsv  petB.tsv  petD.tsv  petE.tsv  petG.tsv  petL.tsv  (+61 more)
data Names/mt/: 12S.tsv  16S.tsv  ATP6.tsv  ATP8.tsv  COI.tsv  COII.tsv  COIII.tsv  CYTB.tsv  Control Region.tsv  ND1.tsv  ND2.tsv  ND3.tsv  ND4.tsv  ND4L.tsv  ND5.tsv  ND6.tsv  OH.tsv  OL.tsv
dbSynGenes/: SynGenes.xlsx  ~$SynGenes.xlsx
docs/: index.html  json.js  scripts.js  style.css
